--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-﻿body {
+body {
     margin: 10px;
     /*background-color: #404040;*/
     font-family: Arial, Helvetica, sans-serif;
@@ -6,7 +6,27 @@
     font-size: 17px;
 }
 
-    /* Style the tab */
+.question-section {
+    font-size: 25px;
+    margin-left: 100px;
+}
+
+.firstColumn {
+    margin: 10px;
+    margin-left: 0;
+    width: calc(60% - 20px);
+    display: inline-block
+}
+.secondColumn {
+    margin: 10px;
+    margin-right: 0;
+    width: calc(40% - 20px);
+    display: inline-block;
+    vertical-align: top;
+}
+
+
+/* Style the tab */
 .tab {
     overflow: hidden;
     border: 1px solid #ccc;
@@ -76,16 +96,10 @@
     width: 700px;
     height: 450px;
     display: inline;
-    border-style: solid;
-    border-color: lightslategray;
-    grid-column: 1 / 3;
-    grid-row: 1;
 }
 
 #legend1 {
     width: 700px;
-    /*grid-column: 1 / 3;
-    grid-row: 2;*/
 }
 
 #map rect {
@@ -123,9 +137,7 @@
 }*/
 
 .container {
-    /*-webkit-flex: 1; 
-    -ms-flex: 1; 
-    flex: 1;*/
+ 
     display: grid;
     grid-gap: 10px;
     grid-template-columns: 700px 450px 400px;
