--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ select {
     border: none;
     border-radius: 4px;
     background-color: #f1f1f1;
+    margin-bottom: 40px;
+    margin-top: 10px;
 }
 
 
